Tests/CompilerTests/negative/bodyless-local-function.hylo
//! no-std stage:typing

fun outer() -> Void {
  fun inner()
}
