Tests/CompilerTests/negative/bodyless-local-function.diagnostics.expected
negative/bodyless-local-function.hylo:4.7-12: error: declaration requires a body
  fun inner()
      ~~~~~
